# SimpleSpecs

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  headersearch_20251005_155839_227575.txt  ollama_test.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  simplespecs.db
.github/workflows/: ci.yml  golden-replay.yml
Agents2/: Agent_P0_Baseline.md  Agent_P1_Audit.md  Agent_P2_Design_Spikes.md  Agent_P3_Reader.md  Agent_P4_HeaderTree.md  Agent_P5_Integration.md  Agent_P6_Tests.md  Agent_P7_Performance.md  Agent_P8_Docs_Rollout.md  Agents_Overview.md
artifacts/23f7eae5862f408016f419b70f31387658517ddd7e2af01bf4ce1ae16b6f8182/parsed/: objects.json
backend/: config.py  constants.py  header_export.py  main.py  models.py  models_db.py  openrouter.py  store.py
backend/app/: __init__.py
backend/app/routers/: __init__.py  specs.py
backend/cli/: parse_headers.py  specs_index.py  specs_query.py
backend/routers/: _headers_common.py  export.py  files.py  headers.py  headers_ollama.py  health.py  ingest.py  parse.py  specs.py  upload.py
backend/services/: chunker.py  document_pipeline.py  embeddings.py  headers.py  headers_detect.py  index_store.py  mineru_adapter.py  ocr.py  parse_docx.py  parse_txt.py  pdf_mineru.py  pdf_native.py  pdf_parser.py  search.py  spec_atomizer.py  spec_rag.py  specs.py  text_blocks.py
backend/tests/: test_atomizer.py  test_chunker.py  test_contracts.py  test_headers_common.py  test_headers_native.py  test_headers_parse.py  test_headers_router.py  test_health.py  test_mineru.py  test_mineru_startup.py  test_openrouter_provider.py  test_parent_aggregation.py  test_parse_docx.py  test_parse_mfc_pdf.py  test_parse_pdf_mineru.py  test_parse_pdf_native.py  test_parse_txt.py  test_parsers.py  test_pdf_parity.py  test_search.py  test_specs_cli.py  test_specs_loop_resume.py  test_specs_merge.py  test_specs_routes.py
backend/text/: toc_filters.py
docs/: DEV_SETUP.md
frontend/: index.html  styles.css
frontend/js/: api.js  constants.js  main.js  state.js  ui.js
plan2/: Phase0_Baseline.md  Phase1_Audit.md  Phase2_Design_Spikes.md  Phase3_Reader.md  Phase4_HeaderTree.md  Phase5_Integration.md  Phase6_Tests.md  Phase7_Performance.md  Phase8_Docs_Rollout.md  Plan_Overview.md
pymupdf/: __init__.py
reports/: pdf_ingestion_test_run.md  phase0_verification_report.md  phase1_verification_report.md  phase2_section_chunking_verification.md
scripts/: run_headers.py
tests/: test_header_anchoring_toc.py  test_run_headers_cli.py  test_toc_filters.py
(+31 files in other folders)
