[project]
name = "simplespecs"
version = "0.1.0"
description = "Simple specs extraction service"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.2,<3",
    "python-multipart>=0.0.9,<0.0.10",
    "requests>=2.31,<3",
    "httpx>=0.26,<0.28",
    "sqlalchemy>=2.0,<3",
    "sqlmodel>=0.0.16,<0.0.22",
    "charset-normalizer>=3.0,<4",
    "python-docx>=0.8.11,<1.3",
    "pypdf>=3,<4",
    "mammoth>=1.6,<2",
    "docx2python>=2.8,<4",
    "pdfplumber>=0.11,<0.12",
    "pdfminer.six>=20221105",
    "PyMuPDF>=1.23,<1.25",
    "pikepdf>=8,<10",
    "reportlab>=3.6,<4",
]

[project.optional-dependencies]
dev = [
    "black>=24,<25",
    "isort>=5.13,<6",
    "mypy>=1.10,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.6,<4",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=4,<5",
    "ruff>=0.5,<1",
]
optional = [
    "camelot-py[base]>=0.11,<0.12",
    "tabula-py>=2.7,<3",
    "pandas>=2.1,<3",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.8,<5",
    "matplotlib>=3.8,<4",
    "ocrmypdf>=15,<17",
    "pytesseract>=0.3,<0.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402", "F401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings --cov=backend --cov-report=term-missing"
testpaths = ["backend/tests"]

[tool.uv]
dev-dependencies = [
    "simplespecs[dev]",
]
